# DefectDetector

./: .gitignore  CMakeLists.txt  README.md
src/: detector.cpp  detector.h  main.cpp
